--- a/khushi/exmple_txt.html
+++ b/khushi/exmple_txt.html
@@ -202,3 +202,188 @@
 
 </body>
 </html>
+
+
+
+Wine Park Experience Store, Mumbai is now open.Know more
+
+Search
+companylogo.png
+Contact Us
+0
+All Wines
+All Wines
+Red Wine
+Cabernet Sauvignon
+Shiraz/Syrah
+Sangiovese
+Pinot Noir
+Merlot
+Tempranillo
+Nebbiolo
+Grenache
+Malbec
+Barbera
+Cabernet Franc
+Pinotage
+Blaufränkisch
+Nerello Mascalese
+Touriga Nacional
+Corvina
+White Wine
+Chardonnay
+Sauvignon Blanc
+Chenin Blanc
+Riesling
+Pinot Grigio
+Viognier
+Carricante
+Gruner Veltliner
+Loureiro
+Orange Wine
+Natural wine
+Sparkling Wine
+Champagne
+Prosecco
+Rose
+Vermouth
+Sweet Wine
+Mixed Cases
+Gift Wine
+All Gift Hampers
+Gifts by Occasion
+Birthday
+Anniversary
+Thank You
+Popular Gifts
+For Him
+For Her
+For Connoisseur
+Shop by Price
+Under ₹ 4000
+Under ₹ 7000
+Under ₹ 10000
+Above ₹ 10000
+Great Bottles to Gift
+Champagne/Sparkling
+White
+Red
+Gift Hampers
+Gift Vouchers
+Corporate Gifts
+Regions
+argentina
+australia
+austria
+germany
+india
+new zealand
+portugal
+south africa
+spain
+USA
+italy
+Tuscany
+Piedmont
+Veneto
+Alto Adige
+Sicily
+Friuli
+france
+Champagne
+Bordeaux
+Burgundy
+Rhone
+Loire Valley
+Discover Wine
+Wines
+Low Sugar Wines
+Low Alcohol Wines
+Unique Grape Varietals
+Fruity Reds
+Wines Under 3K
+Bordeaux Wines
+Burgundy Wines
+Best Sellers
+Vivino 4.0+
+Organic Wines
+Wine Park Selections
+New Wines
+Limited Specials
+Beer
+Wine Accessories
+Blog
+Brochure
+Bangalore Brochure
+Delhi Brochure
+Goa Brochure
+Hyderabad Brochure
+Maharashtra Brochure
+Rajasthan Brochure
+All Wines
+Red Wine
+White Wine
+Rose Wine
+Champagne & Sparkling
+Sweet Wine
+Indian wine
+Italian wine
+French wine
+In the Spotlight
+Imported Wines Under 3k
+Best Sellers
+Organic Wines
+Organic Wines
+Imported Wines Under 3k 
+Imported Wines Under 3k
+Imported Wines Under 3k
+Big Bold Reds
+Gifting by Wine Park
+For Him
+For Her
+Champagne
+Champagne
+For Him 
+For Him
+Birthday Gifts 
+Birthday Gifts
+Best Sellers
+Discover Wines
+Unique Grape Varietals 
+Unique Grape Varietals
+Unique Grape Varietals 
+Case of the month
+Unique Grape Varietals 
+Iconic Wines
+Organic Wines 
+Limited Specials
+New Arrivals at Wine Park
+Beer & Mead
+View All
+Featured Brands
+Brancaia Logo.jpeg?V=29052025113159
+Brancaia
+Saint Clair.jpg?V=29052025113159
+Saint Clair
+Saint Cosme.jpg?V=29052025113159
+Saint Cosme
+Thelema.jpg?V=29052025113159
+Thelema
+Mixed Case Collection
+Wine Accessories
+Blog
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
