--- a/wibside/project_hospital/index.html
+++ b/wibside/project_hospital/index.html
@@ -63,7 +63,7 @@
                 <li>Request A Quote</li>
             </ul>
             <div class="k">
-                <input type="search" placeholder="🔍 search">
+                <input type="search" placeholder="search🔍">
             </div>
         </div>
     </nav>
