--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!---DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -80,5 +80,38 @@ button:active:before {
   <span>BUTTON</span>
 </button>
 </div>
+</body>
+</html-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>In the Spotlight</title>
+  <style>
+    .line-text {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 40px;
+    }
+
+    .line-text::before,
+    .line-text::after {
+      content: "";
+      flex: 1;
+      border-bottom: 1px solid #aaa;
+    }
+
+    .line-text:not(:empty)::before {
+      margin-right: .5em;
+    }
+
+    .line-text:not(:empty)::after {
+      margin-left: .5em;
+    }
+  </style>
+</head>
+<body>
+  <div class="line-text">In the Spotlight</div>
 </body>
 </html>
