--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -86,32 +86,30 @@ button:active:before {
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>In the Spotlight</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <style>
-    .line-text {
-      display: flex;
-      align-items: center;
-      text-align: center;
-      margin: 40px;
-    }
+  .browse_button {
+  width: 100px;
+  height: 40px;
+  border: 1px solid #a54284;
+  border-radius: 20px;
+  transition: all 0.3s;
+  background: #a54284;
+  color: #fff;
+  font-size: 17px;
+  font-weight: 520;
+}
 
-    .line-text::before,
-    .line-text::after {
-      content: "";
-      flex: 1;
-      border-bottom: 1px solid #aaa;
-    }
+.browse_button:hover {
+  background:#ffcc25;
+  color: white;
+  font-size: 20px;
+}
 
-    .line-text:not(:empty)::before {
-      margin-right: .5em;
-    }
-
-    .line-text:not(:empty)::after {
-      margin-left: .5em;
-    }
   </style>
 </head>
 <body>
-  <div class="line-text">In the Spotlight</div>
+  <button class="browse_button">Browse</button>
 </body>
 </html>
