--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -1,4 +1,4 @@
-<!---DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -81,7 +81,7 @@ button:active:before {
 </button>
 </div>
 </body>
-</html-->
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
