--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -11,7 +11,7 @@
      justify-content: center;
  }
 button {
-  --color: black;
+  --color:pink;
   font-family: inherit;
   display: inline-block;
   width: 17em;
