--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -14,7 +14,7 @@ button {
   --color:pink;
   font-family: inherit;
   display: inline-block;
-  
+  width: 3em;
   height: 4em;
   line-height: 2.5em;
   margin: 20px;
@@ -58,7 +58,7 @@ button:hover:before {
 }
 
 button:active:before {
-  background:yellow;
+  background:blueviolet;
   transition: background 0s;
   
 }
