--- a/khushi/form/note.txt.htm
+++ b/khushi/form/note.txt.htm
@@ -2,84 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gift Search Form</title>
+  <title>Perfect Gift Search</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fefefe;
-      padding: 40px;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
-    .gift-container {
-      background-color: #f8f4ee;
-      padding: 30px;
+    .container {
+      background-color: #f8f5f0;
+      padding: 30px 25px;
       border-radius: 10px;
-      width: 400px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 500px;
     }
 
-    .gift-container h2 {
+    .container h2 {
       font-style: italic;
       font-weight: 400;
-      margin-bottom: 5px;
+      margin: 0 0 5px;
+      font-size: 24px;
+      color: #333;
     }
 
-    .gift-container p {
-      font-size: 14px;
-      color: #333;
-      margin-bottom: 20px;
+    .container p {
+      margin: 0 0 20px;
+      color: #444;
+      font-size: 15px;
     }
 
     .form-group {
       display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .input-box {
+      display: flex;
+      flex-direction: column;
+    }
+
+    label {
+      font-size: 13px;
+      color: #888;
+      position: absolute;
+      top: 300px;
+      margin-bottom: 0px;
     }
 
     input[type="text"],
     input[type="date"] {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      flex: 1;
+      padding: 12px 15px;
       font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      outline: none;
+      position: relative;
     }
 
     input[type="date"]::-webkit-calendar-picker-indicator {
-      padding-left: 10px;
+      filter: invert(0.5);
       cursor: pointer;
     }
 
-    .search-btn {
-      width: 100%;
+    .search-button {
+      margin-top: 20px;
       background-color: #000;
       color: white;
       padding: 12px;
       border: none;
       border-radius: 30px;
-      font-weight: bold;
       font-size: 14px;
+      font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
 
-    .search-btn:hover {
+    .search-button:hover {
       background-color: #333;
     }
   </style>
 </head>
 <body>
 
-<div class="gift-container">
-  <h2>Find the perfect gift</h2>
-  <p>Start here to narrow your search</p>
+  <div class="container">
+    <h2>Find the perfect gift</h2>
+    <p>Start here to narrow your search</p>
 
-  <div class="form-group">
-    <input type="text" placeholder="Delivery Zip Code">
-    <input type="date">
+    <div class="form-group">
+      <div class="input-box">
+        <label>Sending to</label>
+        <input type="text" placeholder="Delivery Zip Code">
+      </div>
+
+      <div class="input-box">
+        <label>Delivery Date</label>
+        <input type="date">
+      </div>
+
+      <button class="search-button">SEARCH AVAILABLE GIFTS</button>
+    </div>
   </div>
-
-  <button class="search-btn">SEARCH AVAILABLE GIFTS</button>
-</div>
 
 </body>
 </html>
