--- a/khushi/form.html
+++ b/khushi/form.html
@@ -104,7 +104,8 @@
     <div class="calendar-icon">
       <label for="delivery">📅</label>
     </div>
+  
   </div>
-
+ <input type="date">
 </body>
 </html>
