--- a/khushi/form.html
+++ b/khushi/form.html
@@ -41,7 +41,7 @@
       border-radius: 4px;
       overflow: hidden;
       width: 250px;
-      font-family: Arial, sans-serif;
+      font-family:NIB Light Italic;
     }
 
     .date-wrapper input[type="date"] {
@@ -92,6 +92,10 @@
     .title{
         background-color: white;
     }
+    .k:hover{
+      text-decoration: underline;
+      transform: text-decoration 0.3s ease;
+    }
   </style>
 </head>
 <body>
@@ -106,6 +110,7 @@
     </div>
   
   </div>
- <input type="date">
+  <label>sksk</label><br>
+ <p class="k">khushi</p>
 </body>
 </html>
