--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -16,6 +16,10 @@
             width: 100px;
             height: 35px;
         }
+        .ieldset-1{
+            width: 200px;
+            height: 35px;
+        }
         placeholder>input{
           text-align: center;
           border: 1px solid black !important;
@@ -34,12 +38,15 @@
             width: 25;
             position: relative;
         }
+        .parents{
+            display: flex;
+        }
     </style>
 </head>
 
 <body>
     <div class="parents">
-        <fieldset class="">
+        <fieldset class="ieldset-1">
             <legend>Sending to</legend> 
             <input type="text" placeholder="Delivery Zip Code">
         </fieldset>
