--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -40,11 +40,13 @@
         }
         .parents{
             display: flex;
+            border: 1px solid black;
         }
     </style>
 </head>
 
 <body>
+    
     <div class="parents">
         <fieldset class="ieldset-1">
             <legend>Sending to</legend> 
