--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -20,10 +20,7 @@
             width: 200px;
             height: 35px;
         }
-        placeholder>input{
-          text-align: center;
-          border: 1px solid black !important;
-        }
+
         .cl{
             width: 42px;
             background-color: rgb(24, 188, 188);
@@ -40,13 +37,18 @@
         }
         .parents{
             display: flex;
-            border: 1px solid black;
+        }
+        .p{
+          
+             border: 1px solid black;
+             height: 200px;
+             width: 50%;
         }
     </style>
 </head>
 
 <body>
-    
+     <div class="p">
     <div class="parents">
         <fieldset class="ieldset-1">
             <legend>Sending to</legend> 
@@ -61,6 +63,7 @@
         <img src="../../khushi/task2/Calendar alt.svg" class="cl">
         </div>
 
+    </div>
     </div>
 </body>
 
