--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -41,7 +41,7 @@
         .p{
           
              border: 1px solid black;
-             height: 200px;
+             height:150px;
              width: 50%;
         }
     </style>
@@ -49,6 +49,9 @@
 
 <body>
      <div class="p">
+
+        <p class="text-1">Find the perfect gift</p>
+        <p class="text-2">Star here to narrow your search</p>
     <div class="parents">
         <fieldset class="ieldset-1">
             <legend>Sending to</legend> 
