--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -1,97 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        input,
-        input :focus {
-            border: 0 !important;
-            outline: none !important;
-            box-shadow: none !important;
-        }
-        fieldset{
-            width: 100px;
-            height: 35px;
-        }
-        .ieldset-1{
-            width: 200px;
-            height: 35px;
-        }
 
-        .cl{
-            width: 42px;
-            background-color: rgb(24, 188, 188);
-            height: 44px;
-            position: absolute;
-            top: 9px;
-            left: 195px;
-        }
-        .parents2{
-            display: flex;
-            align-items: center;
-            width: 25;
-            position: relative;
-        }
-        .parents{
-            display: flex;
-            padding: 0px 30px;
-        }
-        .p{
-          
-             border: 1px solid white;
-             border-radius:10px;
-              box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
-             height:170px;
-             width: 43%;
-        }
-        .text-1,.text-2{
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            padding: 0px 30px;
-            font-size:18px;
-        }
-    </style>
-</head>
-
-<body>
-     <div class="p">
-
-        <p class="text-1"><i>Find the perfect gift</i></p>
-        <p class="text-2">Star here to narrow your search</p>
-    <div class="parents">
-        <fieldset class="ieldset-1">
-            <legend>Sending to</legend> 
-            <input type="text" placeholder="Delivery Zip Code">
-        </fieldset>
-            
-         <div class="parents2">
-        <fieldset>
-            <legend>Delivery Date</legend> 
-            <input type="text" placeholder="MM/DD/YYYY">
-        </fieldset>
-        <img src="../../khushi/task2/Calendar alt.svg" class="cl">
-        </div>
-
-    </div>
-    </div>
-</body>
-
-</html>
-
-<!--DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        /* From Uiverse.io by gharsh11032000 */ 
 .button {
   cursor: pointer;
   position: relative;
-  padding: 10px 24px;
+  width: 300px;
+  height: 55px;
+  padding: 10px 0px;
   font-size: 18px;
   color: black;
   border: 2px solid black;
@@ -107,8 +28,8 @@
   position: absolute;
   inset: 0;
   margin: auto;
-  width: 50px;
-  height: 50px;
+  width: 300px;
+  height: 55px;
   border-radius: inherit;
   scale: 0;
   z-index: -1;
@@ -117,7 +38,7 @@
 }
 
 .button:hover::before {
-  scale: 3;
+  scale: 2;
 }
 
 .button:hover {
@@ -136,11 +57,9 @@
 </head>
 
 <body>
-    <button class="button">
-  Subscribe
-</button>
+    <button class="button">SHOP SUMMER</button>
 </body>
-</html-->
+</html>
 
 
 <!--DOCTYPE html>
