--- a/khushi/task2/flower_1.html
+++ b/khushi/task2/flower_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flowers_Animation</title>
     <style>
 
 
@@ -38,11 +38,51 @@
 .Hire-6 > img {
   height: inherit;
   width: 190px;
-  padding: 0px 5px;
-  border-radius: 130px;
+  padding: 0px 15px;
   object-fit: fill;
 }
 .parents_main_4:hover .Hire-6 {
+  animation-play-state: paused;
+}
+
+/**/
+
+
+ .parents_main_5 {
+  height: 180px;
+  overflow: hidden;
+  margin: 30px 20px;
+  display: flex;
+  align-items: center;
+}
+
+.parents_main_child5 {
+  position: relative;
+  width: 100%;
+  height: inherit;
+}
+
+.Hire-7 {
+  position: absolute;
+  height: inherit;
+  animation: scroll-6 var(--duration, 10s) linear infinite;
+  right: 100%;
+  animation-delay: calc(var(--duration, 10s) / 7 * (7 - var(--k)) * -1);
+}
+
+@keyframes scroll-6 {
+  to {
+    right: -250px;
+  }
+}
+
+.Hire-7 > img {
+  height: inherit;
+  width: 190px;
+  padding: 0px 15px;
+  object-fit: fill;
+}
+.parents_main_5:hover .Hire-7 {
   animation-play-state: paused;
 }
 
@@ -80,15 +120,48 @@
                 <div class="Hire-6" style="--k:7">
                     <img src="../../images/roses_img.avif" alt="img_07">
                 </div>
-
-
             </div>
         </div>
     </div>
-     
+
+
 <!-------------->
 
+ <div class="parents_main_5">
+            <div class="parents_main_child5">
+
+                <div class="Hire-7" style="--k:1">
+                    <img src="../../images/carnations_img.avif" alt="img_01">
+                </div>
+
+                <div class="Hire-7" style="--k:2">
+                    <img src="../../images/Exotic_flower.avif" alt="img_02">
+                </div>
+
+                <div class="Hire-7" style="--k:3">
+                    <img src="../../images/flower_box.avif" alt="img_03">
+                </div>
+
+                <div class="Hire-7" style="--k:4">
+                    <img src="../../images/imagecombo_img.avif" alt="img_04">
+                </div>
+
+                <div class="Hire-7" style="--k:5">
+                    <img src="../../images/lilies.avif" alt="img_05">
+                </div>
+
+                <div class="Hire-7" style="--k:6">
+                    <img src="../../images/orchids_img.avif" alt="img_06">
+                </div>
+
+                <div class="Hire-7" style="--k:7">
+                    <img src="../../images/roses_img.avif" alt="img_07">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
 </html>
+
