--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -1,37 +1,268 @@
+<!--DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>4-Image 3D Carousel</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: linear-gradient(to top, #a8c0ff, #3f2b96);
+      font-family: sans-serif;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .carousel-container {
+      width: 1000px;
+      height: 300px;
+      position: relative;
+      perspective: 1000px;
+    }
+
+    .carousel {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      transform-style: preserve-3d;
+    }
+
+    .carousel img {
+      position: absolute;
+      width: 250px;
+      height: 180px;
+      border-radius: 10px;
+      transition: all 0.5s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      opacity: 0;
+      transform: scale(0.6);
+    }
+
+    .carousel img.active {
+      opacity: 1;
+      transform: translateX(0px) scale(1);
+      z-index: 5;
+    }
+
+    .carousel img.prev {
+      opacity: 0.7;
+      transform: translateX(-270px) scale(0.85) rotateY(25deg);
+      z-index: 4;
+    }
+
+    .carousel img.next {
+      opacity: 0.7;
+      transform: translateX(270px) scale(0.85) rotateY(-25deg);
+      z-index: 4;
+    }
+
+    .carousel img.prev2 {
+      opacity: 0.4;
+      transform: translateX(-500px) scale(0.6) rotateY(45deg);
+      z-index: 2;
+    }
+
+    .carousel img.next2 {
+      opacity: 0.4;
+      transform: translateX(500px) scale(0.6) rotateY(-45deg);
+      z-index: 2;
+    }
+
+    .btns {
+      position: absolute;
+      bottom: -50px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .btns button {
+      background: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+  </style>
+</head>
+<body>
+
+  <div class="carousel-container">
+    <div class="carousel" id="carousel">
+      <img src="https://picsum.photos/id/1015/250/180" alt="">
+      <img src="https://picsum.photos/id/1025/250/180" alt="">
+      <img src="https://picsum.photos/id/1035/250/180" alt="">
+      <img src="https://picsum.photos/id/1045/250/180" alt="">
+      <img src="https://picsum.photos/id/1055/250/180" alt="">
+      <img src="https://picsum.photos/id/1065/250/180" alt="">
+    </div>
+
+    <div class="btns">
+      <button onclick="prev()">Prev</button>
+      <button onclick="next()">Next</button>
+    </div>
+  </div>
+
+  <script>
+    const images = document.querySelectorAll('.carousel img');
+    let current = 0;
+
+    function update() {
+      images.forEach((img, index) => {
+        img.className = ''; // reset all
+
+        if (index === current) {
+          img.classList.add('active');
+        } else if (index === (current - 1 + images.length) % images.length) {
+          img.classList.add('prev');
+        } else if (index === (current + 1) % images.length) {
+          img.classList.add('next');
+        } else if (index === (current - 2 + images.length) % images.length) {
+          img.classList.add('prev2');
+        } else if (index === (current + 2) % images.length) {
+          img.classList.add('next2');
+        }
+      });
+    }
+
+    function prev() {
+      current = (current - 1 + images.length) % images.length;
+      update();
+    }
+
+    function next() {
+      current = (current + 1) % images.length;
+      update();
+    }
+
+    update();
+  </script>
+
+</body>
+</html-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }                                      
-         .parents {
-            border: 1px solid red;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;    
-        }
-        .child {
-            width: 100px;
-            height: 50px;
-            background-color: blueviolet;
-            margin: 5px;
-            color: aliceblue;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>3D Carousel – Reduced Gaps</title>
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      background: linear-gradient(to top, #a8c0ff, #3f2b96);
+      display: flex; justify-content: center; align-items: center;
+      height: 400px; font-family: sans-serif;
+    }
+    .carousel-container {
+      width: 200px;
+      height: 200px;
+      perspective: 1000px;
+      position: relative;
+    }
+    .carousel {
+      width: 100%; height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+    }
+    .carousel img {
+      position: absolute;
+      width: 250px; height: 180px;
+      border-radius: 10px;
+      transition: all 0.5s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      opacity: 0; transform: scale(0.7);
+    }
+    .carousel img.active {
+      opacity: 1;
+      transform: translateX(0) scale(1);
+      z-index: 5;
+    }
+    .carousel img.prev {
+      opacity: 0.8;
+      transform: translateX(-200px) scale(0.85) rotateY(25deg);
+      z-index: 4;
+    }
+    .carousel img.next {
+      opacity: 0.8;
+      transform: translateX(200px) scale(0.85) rotateY(-25deg);
+      z-index: 4;
+    }
+    .carousel img.prev2 {
+      opacity: 0.5;
+      transform: translateX(-360px) scale(0.65) rotateY(45deg);
+      z-index: 2;
+    }
+    .carousel img.next2 {
+      opacity: 0.5;
+      transform: translateX(360px) scale(0.65) rotateY(-45deg);
+      z-index: 2;
+    }
+    .btns {
+      position: absolute; bottom: -50px;
+      width: 100%; display: flex;
+      justify-content: space-between;
+    }
+    .btns button {
+      background: #fff; border: none;
+      padding: 10px 20px; font-size: 18px;
+      cursor: pointer; border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 <body>
-    <div class="parents">
-        <div class="child">1</div>
-        <div class="child">2</div>
-        <div class="child">3</div>
-        <div class="child">4</div>
-        <div class="child">5</div>
+
+  <div class="carousel-container">
+    <div class="carousel" id="carousel">
+      <img src="https://picsum.photos/id/1015/250/180" alt="">
+      <img src="https://picsum.photos/id/1025/250/180" alt="">
+      <img src="https://picsum.photos/id/1035/250/180" alt="">
+      <img src="https://picsum.photos/id/1045/250/180" alt="">
+      <img src="https://picsum.photos/id/1055/250/180" alt="">
+      <img src="https://picsum.photos/id/1065/250/180" alt="">
     </div>
+    <div class="btns">
+      <button onclick="prev()">Prev</button>
+      <button onclick="next()">Next</button>
+    </div>
+  </div>
+
+  <script>
+    const imgs = document.querySelectorAll('.carousel img');
+    let current = 0;
+
+    function update() {
+      imgs.forEach((img, i) => {
+        img.className = '';
+        if (i === current) img.classList.add('active');
+        else if (i === (current - 1 + imgs.length) % imgs.length) img.classList.add('prev');
+        else if (i === (current + 1) % imgs.length) img.classList.add('next');
+        else if (i === (current - 2 + imgs.length) % imgs.length) img.classList.add('prev2');
+        else if (i === (current + 2) % imgs.length) img.classList.add('next2');
+      });
+    }
+
+    function prev() { current = (current - 1 + imgs.length) % imgs.length; update(); }
+    function next() { current = (current + 1) % imgs.length; update(); }
+
+    update();
+  </script>
+
 </body>
 </html>
