--- a/khushi/task2/flower_1.html
+++ b/khushi/task2/flower_1.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowers_Animation</title>
     <style>
-
 
  .parents_main_4 {
   height: 180px;
@@ -29,6 +28,7 @@
   animation-delay: calc(var(--duration, 15s) / 7 * (7 - var(--k)) * -1);
 }
 
+
 @keyframes scroll-5 {
   to {
     left: -250px;
@@ -46,8 +46,6 @@
 }
 
 /**/
-
-
  .parents_main_5 {
   height: 180px;
   overflow: hidden;
@@ -125,7 +123,7 @@
     </div>
 
 
-<!-------------->
+
 
  <div class="parents_main_5">
             <div class="parents_main_child5">
@@ -160,8 +158,144 @@
             </div>
         </div>
     </div>
-
-
 </body>
-</html>
+</html-->
+
+<!--DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>3D Image Carousel</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    .p{
+      background: linear-gradient(to top, #a8c0ff, #3f2b96);
+      font-family: sans-serif;
+      height: 400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .carousel-container {
+      width: 500px;
+      height: 240px;
+      position: relative;
+      perspective: 1000px;
+    }
+
+    .carousel {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      transform-style: preserve-3d;
+    }
+
+    .carousel img {
+      position: absolute;
+      width: 300px;
+      height: 200px;
+      border-radius: 10px;
+      transition: all 0.5s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      opacity: 0;
+      transform: scale(0.7);
+    }
+
+    .carousel img.active {
+      opacity: 1;
+      transform: translateX(0) scale(1);
+      z-index: 3;
+    }
+
+    .carousel img.prev {
+      opacity: 0.7;
+      transform: translateX(-200px) scale(0.8) rotateY(30deg);
+      z-index: 2;
+    }
+
+    .carousel img.next {
+      opacity: 0.7;
+      transform: translateX(200px) scale(0.8) rotateY(-30deg);
+      z-index: 2;
+    }
+
+    .btns {
+      position: absolute;
+      bottom: -50px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .btns button {
+      background: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+  </style>
+</head>
+<body>
+  <div class="p">
+  <div class="carousel-container">
+    <div class="carousel" id="carousel">
+      <img src="../../images/11.jpg" alt="">
+      <img src="../../images/11.jpg" alt="">
+      <img src="../../images/11.jpg" alt="">
+      <img src="../../images/11.jpg" alt="">
+      <img src="../../images/11.jpg" alt="">
+    </div>
+
+    <div class="btns">
+      <button onclick="prev()">Prev</button>
+      <button onclick="next()">Next</button>
+    </div>
+  </div>
+
+  <script>
+    const images = document.querySelectorAll('.carousel img');
+    let current = 0;
+
+    function update() {
+      images.forEach((img, index) => {
+        img.className = ''; // Reset all classes
+        if(index === current) {
+          img.classList.add('active');
+        } else if(index === (current - 1 + images.length) % images.length) {
+          img.classList.add('prev');
+        } else if(index === (current + 1) % images.length) {
+          img.classList.add('next');
+        }
+      });
+    }
+
+    function prev() {
+      current = (current - 1 + images.length) % images.length;
+      update();
+    }
+
+    function next() {
+      current = (current + 1) % images.length;
+      update();
+    }
+
+    update(); // Initial call
+  </script>
+  </div>
+</body>
+</html-->
 
