--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -231,12 +231,12 @@
   <div class="slider_3D">
   <div class="carousel-container">
     <div class="carousel" id="carousel">
-      <img src="https://picsum.photos/id/1015/250/180" alt="">
-      <img src="https://picsum.photos/id/1025/250/180" alt="">
-      <img src="https://picsum.photos/id/1035/250/180" alt="">
-      <img src="https://picsum.photos/id/1045/250/180" alt="">
-      <img src="https://picsum.photos/id/1055/250/180" alt="">
-      <img src="https://picsum.photos/id/1065/250/180" alt="">
+      <img src="" alt="">
+      <img src="../../css/red_1.avif" alt="">
+      <img src="../../css/red_2.avif" alt="">
+      <img src="../../css/red_3.avif" alt="">
+      <img src="../../css/red_3.avif" alt="">
+      <img src="../../css/img_4.avif" alt="">
     </div>
   
 
