--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -231,7 +231,7 @@
   <div class="slider_3D">
   <div class="carousel-container">
     <div class="carousel" id="carousel">
-      <img src="" alt="">
+      <img src="../../css/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" alt="">
       <img src="../../css/red_1.avif" alt="">
       <img src="../../css/red_2.avif" alt="">
       <img src="../../css/red_3.avif" alt="">
