--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -163,6 +163,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3D Carousel – Reduced Gaps</title>
   <style>
+    *{
+      padding: 0;
+      margin: 0;
+    }
     
    .slider_3D {
       background: linear-gradient(to top, #a8c0ff, #3f2b96);
@@ -235,7 +239,7 @@
       <img src="../../css/red_1.avif" alt="">
       <img src="../../css/red_2.avif" alt="">
       <img src="../../css/red_3.avif" alt="">
-      <img src="../../css/red_3.avif" alt="">
+      <img src="../../css/red_5.avif" alt="">
       <img src="../../css/img_4.avif" alt="">
     </div>
   
