--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -11,14 +11,17 @@
     }
     
    .slider_3D {
-      background: linear-gradient(to top, #a8c0ff, #3f2b96);
-      display: flex; justify-content: center; align-items: center;
-      height: 400px; font-family: sans-serif;
+      background: linear-gradient(to top, #a8c0ff, #4d36b1);
+      display: flex; 
+      justify-content: center; 
+      align-items: center;
+      height: 350px; 
+      font-family: sans-serif;
       width: 100%;
     }
     .carousel-container {
       width: 200px;
-      height: 200px;
+      height: 220px;
       perspective: 1000px;
       position: relative;
     }
@@ -29,7 +32,8 @@
     }
     .carousel img {
       position: absolute;
-      width: 250px; height: 180px;
+      width: 250px; 
+      height: 180px;
       border-radius: 10px;
       transition: all 0.5s ease;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
@@ -61,14 +65,19 @@
       z-index: 2;
     }
     .btns {
-      position: absolute; bottom: -50px;
-      width: 100%; display: flex;
+      position: absolute; 
+      bottom: -40px;
+      width: 100%; 
+      display: flex;
       justify-content: space-between;
     }
     .btns button {
-      background: #fff; border: none;
-      padding: 10px 20px; font-size: 18px;
-      cursor: pointer; border-radius: 5px;
+      background: #fff; 
+      border: none;
+      padding: 10px 20px; 
+      font-size: 18px;
+      cursor: pointer; 
+      border-radius: 5px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
   </style>
