--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -11,20 +11,24 @@
     }
     
    .slider_3D {
-      background: linear-gradient(to top, #a8c0ff, #4d36b1);
+      /*background: linear-gradient(to top,#ae9ff2, #a8c0ff);*/
+
+      background: linear-gradient(to top ,#ae9ff2,#f4dacd,#ae9ff2);
       display: flex; 
       justify-content: center; 
-      align-items: center;
+      align-items: center;    
       height: 350px; 
       font-family: sans-serif;
       width: 100%;
     }
+
     .carousel-container {
       width: 200px;
       height: 220px;
       perspective: 1000px;
       position: relative;
     }
+
     .carousel {
       width: 100%; height: 100%;
       position: relative;
@@ -122,4 +126,7 @@
     update();
   </script>
 </body>
+
+
+</div>
 </html>
